# Storage

Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/: README_UNIFIED.md  pyproject.toml
Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/docs/: 102625_monolith_prototypev1.docx  CQE Technical Appendix_ Deep Implementation Analysis.md  CQE Unified Extended Build v1.0.md  CQE Unified Framework_ Extended Build v1.0.md  Morphonic Synthesis — Review, Correlations, And Experimental Schema.docx  Uni-beam Testing & Findings — Canvas Report.docx  session102625.docx
Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/examples/: quickstart_personal_node.py
Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/morphonic_cqe_unified/: __init__.py
Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/morphonic_cqe_unified/apps/: cqe_personal_node.py
Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/morphonic_cqe_unified/core/: cqe_math.py  (+2 more)
Morphonic-CQE-Unified-Build_v1/Morphonic-CQE-Unified-Build_v1/tests/: test_speedlight_plus.py
Morphonic-LambdaSuite_v1/Morphonic-LambdaSuite_v1/: README.md  pyproject.toml
Morphonic-LambdaSuite_v1/Morphonic-LambdaSuite_v1/docs/: MGLC_Spec_v1.0.md
Morphonic-LambdaSuite_v1/Morphonic-LambdaSuite_v1/examples/: factorial_mu.py
Morphonic-LambdaSuite_v1/Morphonic-LambdaSuite_v1/morphonic_lambda/: __init__.py  ast.py  e8_bridge.py  eval.py  glyphs.py  modal.py  runtime.py  typesys.py  typing.py
Morphonic-LambdaSuite_v1/Morphonic-LambdaSuite_v1/tests/: test_beta_eta_delta_mu.py
(+1380 files in other folders)
